[project]
name = "winzy-calendar"
version = "0.1"
description = "Calendar in windows commandline"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-calendar"
Changelog = "https://github.com/sukhbinder/winzy-calendar/releases"
Issues = "https://github.com/sukhbinder/winzy-calendar/issues"
CI = "https://github.com/sukhbinder/winzy-calendar/actions"

[project.entry-points."winzy.plugins"]
cal = "winzy_calendar:cal_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
